--- a/admin/index.html
+++ b/admin/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <script>
-        const REPO = "scinio/deaxsadventure";
+        const REPO = "Scinio/deaxsadventure";
         let GITHUB_TOKEN = "";
         let currentBlocks = [];
         let dataFileSha = "";
