--- a/admin/index.html
+++ b/admin/index.html
@@ -21,7 +21,7 @@
 
     <div class="box" id="login-zone">
         <h2>Enter GitHub Token to Begin</h2>
-        <input type="password" id="token-input" placeholder="github_pat_...">
+        <input type="password" id="token-input" placeholder="Insert Token...">
         <button onclick="checkLogin()">Access Manager</button>
     </div>
 
