--- a/admin/index.html
+++ b/admin/index.html
@@ -59,7 +59,7 @@
 
     <div class="box" id="login-zone">
         <h2>GitHub Token Access</h2>
-        <input type="password" id="token-input" placeholder="github_pat_...">
+        <input type="password" id="token-input" placeholder="Token">
         <button onclick="checkLogin()">Access Workbench</button>
     </div>
 
