--- a/admin/index.html
+++ b/admin/index.html
@@ -80,7 +80,7 @@
             <div id="file-input-wrapper">
                 <input type="file" id="file-input" accept="image/*,video/mp4">
             </div>
-            <textarea id="text-input" class="hidden" placeholder="Type your text here..."></textarea>
+            <textarea id="text-input" class="hidden" placeholder="Format: #HEXCODE|Your text here... (Example: #007bff|Hello!)"></textarea>
             <button onclick="handleAdd()">Add to Current Page</button>
             <div id="status"></div>
         </div>
